--- a/typst.toml
+++ b/typst.toml
@@ -5,4 +5,4 @@ entrypoint = "minienvs.typ"
 exclude = ["sandbox.typ", "*.pdf", "assets/*"]
 authors = ["Daniel Csillag"]
 license = "MIT"
-description = "Theorem environments, the easy way"
+description = "Theorem environments with minimal fuss"
